--- a/P2_HASSACI_Hanya.html
+++ b/P2_HASSACI_Hanya.html
@@ -7,8 +7,39 @@
 	</head>
 
 	<body>
-		<section id="containeur">
-				<div id="fenetre">
+    <header>
+      <img src="Reservia.svg" alt="Logo de Reservia">       <nav>
+      <div>
+        <ul id="haut">
+          <li>Hébergements</li>
+          <li>Activités</li>
+          <li>S'inscrire</li>
+        </ul>
+      </div>
+      </nav>   
+    </header>
+    <section id="recherche">
+      <h3>Trouvez votre hébergement pour des vacances de rêve</h3>
+      <h4>En plein centre ville ou en pleine nature</4>
+      <form method="post" action="traitement.php">
+        <p>
+          <label for="search"></label>
+          <input type="text" name="search" id="search" value="Marseille, France"/>
+          <button>Rechercher</button>
+            </p>
+         <nav>
+          <ul>
+            <li>Filtres</li>
+            <li>Economique</li>
+            <li>Familial</li>
+            <li>Romantique</li>
+            <li>Animaux autorisés</li>
+          </ul>
+        </nav>
+        <p>Plus de 500 logements sont disponibles dans cette ville</p>
+    </section>
+    <section id="containeur">
+      				<div id="fenetre">
 					<h2>Hébergements à Marseille</h2>
 				<div id="hebergements">
 				<div class="carte">H1</div>
@@ -17,14 +48,56 @@
 				<div class="carte">H4</div>
 				<div class="carte">H5</div>
 				<div class="carte">H6</div>
+          <p> Afficher plus</p>
 			</div>	
 			</div>
 				<div id="populaires">
-					<h2>Les plus populaires</h2>
+					<h3>Les plus populaires</h3>
         <div id="fenetre2">
 				<div class="photo">B1</div>
 				<div class="photo">B2</div>
 				<div class="photo">B3</div>
 			</div>
 		</section>
+      <section id="activites">
+        <h3>Activités à Marseille</h3>
+        <div id="fenetre3">
+          <div class="image">C1</div>
+          <div class="image">C2</div>
+          <div class="image">C3</div>
+          <div class="image">C4</div>
+          <div class="image">C5</div>
+          <div class="image">C6</div>
+        </div>
+        </section>
+      <footer> 
+        <nav>
+        <div>
+            <ul id="propos">
+              <li>A propos</li>
+              <li>Fonctionnement du site</li>
+              <li>Conditions générales de vente</li>
+              <li>Données et confidentialité</li>
+            </ul>
+          </nav>
+        </div>
+         <div>
+           <nav>
+             <ul id="qualite">
+               <li>Nos hébergements</li>
+               <li>Charte qualité</li>
+               <li>Soumettre votre hôtel</li>
+             </ul>
+           </nav>
+          </div>
+        <div>
+          <nav>
+            <ul id="assistance">
+              <li>Assistance</li>
+              <li>Centre d'aide</li>
+              <li>Nous contacter</li>
+            </ul>
+          </nav>
+        </div>
+      </footer>
 </body>
